<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="horizontal"
	android:padding="20dip">
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center">
		
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/app_name"
			android:layout_gravity="center" 
			android:textSize="24.5sp"/>
		
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/version"
			android:layout_gravity="center" 
			android:textSize="14sp"
			android:layout_marginBottom="70dip"/>
				
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/start_instructions"
			android:layout_gravity="center"
			android:textSize="14sp"/>
			
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginTop="15dip"
			android:layout_gravity="center">
			<Button
				android:id="@+id/numberOfVariables2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/numvars_2">
			</Button>
			<Button
				android:id="@+id/numberOfVariables3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/numvars_3">
			</Button>
			<Button
				android:id="@+id/numberOfVariables4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/numvars_4">
			</Button>
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginTop="70dip"
			android:layout_gravity="center">
			<Button
				android:id="@+id/about"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about">
			</Button>
		</LinearLayout>	
	</LinearLayout>
</LinearLayout>